account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: swiftpay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "account-role"
        vault.hashicorp.com/agent-inject-secret-db: "swiftpay/data/account-db"
    spec:
      serviceAccountName: account-serviceaccount
      containers:
      - name: account-service
        image: kennethreitz/httpbin:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: swiftpay
spec:
  selector:
    app: account-service
  ports:
  - port: 4002
    targetPort: 80
  type: ClusterIP
