ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiftpay-ingress
  namespace: swiftpay
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 4001
      - path: /api/accounts
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 4002
      - path: /api/transfers
        pathType: Prefix
        backend:
          service:
            name: transfer-service
            port:
              number: 4003
